tree-sitter/FORTRANII/test/corpus/basic.txt
================================================================================
Simple function
================================================================================

FUNCTION ADD(X)
ADD = X + 1
RETURN
END

--------------------------------------------------------------------------------

(program
  (program_unit
    (function_subprogram
      (function_statement
        (function_name)
        (parameter_list
          (variable)))
      (statement
        (statement_body
          (assignment
            (variable)
            (expression
              (arithmetic_expr
                (variable)
                (number))))))
      (statement
        (statement_body
          (return_stmt)))
      (end_stmt))))
