tree-sitter/FORTRANII/test/corpus/subroutine_simple.txt
================================================================================
Simple subroutine
================================================================================

SUBROUTINE PRINT_NUM(X)
PRINT *, X
RETURN
END

--------------------------------------------------------------------------------

(program
  (program_unit
    (subroutine_subprogram
      (subroutine_statement
        (subroutine_name)
        (parameter_list
          (variable)))
      (statement
        (statement_body
          (print_stmt
            (expression
              (variable)))))
      (statement
        (statement_body
          (return_stmt)))
      (end_stmt))))